# elasticsearch-cli

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
ci/: before_deploy.sh  deploy_brew.sh
src/: app.yaml  error.rs  main.rs
src/client/: elastic.rs  fetcher.rs  kibana.rs  mod.rs  stub.rs
src/commands/: base.rs  config.rs  mod.rs  search.rs
src/commands/config/: mod.rs  password_questioner.rs  resolver.rs
src/commands/config/tests/: add_server_tests.rs  mocks.rs  mod.rs  show_tests.rs  update_server_tests.rs  use_server_tests.rs
src/config/: conf.rs  config.rs  error.rs  mod.rs  secrets.rs  server_type.rs
src/display/: extractor.rs  format.rs  mod.rs  renderer.rs
src/display/pager/: collector.rs  mod.rs  pager.rs  scroll_mode.rs  ui.rs
src/es/: mod.rs  response.rs
src/ui/: events.rs  mod.rs  reducers.rs  state.rs  views.rs
src/ui/core/: component.rs  dispatcher.rs  mod.rs  reducer.rs
src/utils/: mod.rs  skip_by_option.rs  take_by_option.rs
