[package]
name = "elastic-cli"
version = "0.1.0"
authors = ["Prokopev Alexandr <a.prokopev@qiwi.com>"]

[dependencies]
clap = "2.31.2"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_yaml = "0.7.3"
reqwest = "0.8.4"
log = "0.4.1"
stderrlog = "0.3.0"
quick-error = "1.2.1"
colored = "1.6"
strfmt = "0.1.6"